fix wrap

--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,5 @@ body {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  margin: 5em 20em 0 20em;
+  margin: 2em 0 2em 0;
 }
